"Fix: consolidate all config into single application.properties using %test. prefixes"